--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 altair==5.5.0
 attrs==25.3.0
+beautifulsoup4==4.13.4
 blinker==1.9.0
 cachetools==6.1.0
 certifi==2025.6.15
@@ -15,6 +16,7 @@ Jinja2==3.1.6
 jsonschema==4.24.0
 jsonschema-specifications==2025.4.1
 kiwisolver==1.4.8
+Markdown==3.8.2
 MarkupSafe==3.0.2
 matplotlib==3.10.3
 mizani==0.13.5
@@ -28,6 +30,7 @@ plotnine==0.14.6
 protobuf==6.31.1
 pyarrow==20.0.0
 pydeck==0.9.1
+pydytuesday==0.1.2
 pyparsing==3.2.3
 python-dateutil==2.9.0.post0
 pytz==2025.2
@@ -37,6 +40,7 @@ rpds-py==0.26.0
 scipy==1.15.3
 six==1.17.0
 smmap==5.0.2
+soupsieve==2.7
 statsmodels==0.14.4
 streamlit==1.46.1
 tenacity==9.1.2
